<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toStartOf="@id/search_town"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:src="@drawable/magnifier"/>
    <EditText
        android:id="@+id/search_town"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/search_town_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/town"
        android:layout_width="@dimen/town_layout_width"
        android:layout_height="@dimen/town_layout_height"
        android:text="@string/town_name"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="500dp"
        />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="@dimen/temperature_layout_width"
        android:layout_height="@dimen/temperature_layout_height"
        android:text="@string/temperature"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/town" />

    <ImageView
        android:id="@+id/now_badge"
        android:layout_width="50dp"
        android:layout_height="@dimen/temperature_layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        android:src="@drawable/cloud"/>


    <TextView
        android:id="@+id/morning"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:text="@string/morning_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />
    <ImageView
        android:id="@+id/yesterday_badge"
        android:layout_width="50dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/morning"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        android:src="@drawable/cloud"/>

    <TextView
        android:id="@+id/evening"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:text="@string/evening_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />
    <ImageView
        android:id="@+id/tomorrow_badge"
        android:layout_width="50dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toStartOf="@id/evening"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        android:src="@drawable/cloud"/>

    <TextView
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:text="@string/separator"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/addition_precipitation"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/addition_precipitation"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/addition_precipitation_badge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition_precipitation"
        android:src="@drawable/cloud"/>
    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/Pressure"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addition_precipitation_badge"/>
    <TextView
        android:id="@+id/pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/pressure_value"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addition_precipitation_badge" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/humidity"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pressure"/>
    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/humidity_value"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pressure_value" />
    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/wind"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity"/>
    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/wind_speed"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/wind"
        app:layout_constraintTop_toBottomOf="@id/humidity"/>
    <TextView
        android:id="@+id/wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/wind_direction"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/wind"
        app:layout_constraintTop_toBottomOf="@id/wind_speed"/>
    <TextView
        android:id="@+id/wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/wind_speed_value"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_value"/>
    <TextView
        android:id="@+id/wind_direction_value"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/wind_direction_value"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_value"/>


</androidx.constraintlayout.widget.ConstraintLayout>